--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,43 +1,45 @@
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+	box-sizing: border-box;
+}
+
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
 body {
-  text-align: center;
-  font-size: 12px;
-  font-family: "Arial, sans-serif";
-  background-color: rgba(39,39,39);
+	line-height: 1;
 }
-
-.cabecalho {
-  border: solid;
-  border-color: rgba(39,39,39);
-  height: 200px;
-  width: 400px;
+ol, ul {
+	list-style: none;
 }
-
-
-.logo{
-  float:left
+blockquote, q {
+	quotes: none;
 }
-
-
-.ranking {
-  margin-top: 130px;
-  margin-left: 60px;
-  background-color: rgb(255,255,255);
-  width: 340px;
-  height: 50px;
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
 }
-
-.ranking p{
-  font-size: 25px
-}
-
-.primeirosColocados{
-  margin-top: 5px;
-  border-style: solid;
-  width: 400px;
-}
-
-.primeiro {
-  background-color: rgba(250,250,250);
-  border-style: solid;
-  height: 100px;
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
 }
