--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,45 +1,49 @@
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-	box-sizing: border-box;
+body {
+  margin: 0;
+  paddin: 0;
+  font-family: "Arial";
+  background-color: rgba(39,39,39);
 }
 
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-	display: block;
+.corpo {
+  width: 400px;
+  margin-left: 40px;
 }
-body {
-	line-height: 1;
+
+.logo {
+  top: 0;
+  left: 0;
+  position: absolute;
 }
-ol, ul {
-	list-style: none;
+
+.ranking p {
+  text-align: center;
+  padding: 10px;
+  margin-top: 132px;
+  margin-left: 100px;
+  font-size: 30px;
+  font-weight: bold;
+  background-color: rgb(255,255,255);
 }
-blockquote, q {
-	quotes: none;
+
+.primeirosColocados {
+  margin-top: 15px;
+  width: 400px;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
+
+.apresentacao {
+  border-style: solid;
+  border-width:2px;
+  padding: 15px;
+  display: flex;
+  background-color: rgba(250,250,250);
+  border-style: solid;
+  height: 100px;
 }
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
+
+.ator {
+  border-radius: 50%;
+  border-style: solid;
+  border-width:5px;
+  border-color: #ba3538;
 }
