--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,34 +6,35 @@ body {
 }
 
 .corpo {
-  width: 400px;
-  margin-left: 40px;
+  width: 320px;
+  margin-left: 35px;
 }
 
 .logo {
+  width: 180px;
   top: 0;
   left: 0;
   position: absolute;
 }
 
 .ranking p {
-  text-align: center;
-  padding: 10px;
-  margin-top: 132px;
-  margin-left: 100px;
-  font-size: 30px;
+  color: #272727;
+  text-align: right;
+  padding: 10px 40px;
+  margin-top: 120px;
+  margin-left: 70px;
+  font-size: 25px;
   font-weight: bold;
   background-color: rgb(255,255,255);
+  border-radius: 3px;
 }
 
 .primeirosColocados {
   margin-top: 15px;
-  width: 400px;
+  width: 320px;
 }
 
 .apresentacao {
-  border-style: solid;
-  border-width:2px;
   padding: 15px;
   display: flex;
   background-color: rgba(250,250,250);
@@ -41,9 +42,53 @@ body {
   height: 100px;
 }
 
+#par{
+  background-color: #f2f1f1;
+}
+
+.texto{
+  padding: 15px 15px;
+}
+
+.texto h1{
+  color: #ba3538;
+  font-size: 15px;
+  font-weight: bold;
+}
+
+.texto p{
+  padding-top: 3px;
+  font-size: 10px;
+  color: #707070;
+  font-weight: bold;
+}
+
 .ator {
   border-radius: 50%;
   border-style: solid;
-  border-width:5px;
+  border-width: 4px;
   border-color: #ba3538;
+  width: 60px;
+}
+
+.numerador{
+  position: absolute;
+  width: 18px;
+  height: 18px;
+  border-radius: 50%;
+  border-style: solid;
+  border-width: 1px;
+  border-color: #707070;
+  margin-bottom: 5px;
+  margin-top: -20px;
+  margin-left: 40px;
+  background-color: white;
+
+}
+
+.numerador p{
+  padding: 3px 5px;
+  font-size: 11px;
+  color: #707070;
+  font-weight: bold;
 }
